--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-axios": "^2.0.0",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.0"
   },
   "devDependencies": {
