--- a/config-example.json
+++ b/config-example.json
@@ -1,18 +1,25 @@
 {
   "timeOffset": 0,
   "ortegaInitialDate": "01.01.72",
-  "realInitialDate": "01.10.2018",
+  "realInitialDate": "01.09.2019",
   "events": {
-    "01.10.2018": {
-      "type": "event",
-      "title": "День, с которого начинается отчёт",
-      "description": "Кто-то должен придумать сюда описание."
-
+    "01.09.2019": {
+      "title": "Одноразовое событие",
+      "description": "Привязывается к настоящей дате в формате dd.mm.yyyy<br>Это событие может припасть на праздник<br>Кстати, это описание поддерживает HTML тэги"
     },
-    "02.10.2018": {
-      "type": "holiday",
-      "title": "Какой-то там праздник",
-      "description": "Где обещанный торт?!"
+    "05.09.2019": {
+      "title": "Ещё одно одноразовое событие",
+      "description": ""
+    }
+  },
+  "holidays": {
+    "01.01": {
+      "title": "Праздник или ежегодное событие",
+      "description": "Привязывается к внутриигровой дате в формате dd.mm<br>Может быть совмещено с одноразовым событием"
+    },
+    "10.02": {
+      "title": "",
+      "description": ""
     }
   }
 }
