--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "homepage": "https://github.com/Ikamari/ortega-calendar#readme",
   "scripts": {
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "dependencies": {
     "babel": "^6.23.0",
